<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>w102_path_planning</name>
  <version>1.0.0</version>
  <description>
    Graph-based path planning simulation for robot W102 navigating a 10x12 ft living room
    around a chair obstacle to reach user John, using Dijkstra shortest-path algorithm.
  </description>

  <maintainer email="w102@cti.com">CTI One</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
<depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>visualization_msgs</depend>
  <depend>rviz2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
